...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
            app:toolbarId="@+id/toolbar">

            <RadioGroup
                android:id="@+id/rg_sort_fav_movie_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryVariant"
                android:orientation="horizontal"
                app:layout_collapseMode="pin">

                <RadioButton
                    android:id="@+id/rb_sort_by_title_asc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:checked="true"
                    android:fontFamily="@font/anton_regular"
                    android:text="@string/sort_asc"
                    android:textColor="@color/versi" />

                <RadioButton
                    android:id="@+id/rb_sort_by_title_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:fontFamily="@font/anton_regular"
                    android:text="@string/sort_desc"
                    android:textColor="@color/versi" />

                <RadioButton
                    android:id="@+id/rb_sort_fav_movies_by_newest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:fontFamily="@font/anton_regular"
                    android:text="@string/sort_newest"
                    android:textColor="@color/versi" />

                <RadioButton
                    android:id="@+id/rb_sort_fav_movies_by_oldest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:fontFamily="@font/anton_regular"
                    android:text="@string/sort_oldest"
                    android:textColor="@color/versi" />
...
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_favorite_movie"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:splitMotionEvents="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
