<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_detail_tv_show"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.tvshows.DetailTvShowFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
...
                android:src="@drawable/ic_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:siRadius="8dp" />

            <TextView
                android:id="@+id/tv_item_tv_show_name_received"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/anton_regular"
                android:text="@string/tv_show_name"
...
                android:contentDescription="@string/year_icon"
                android:src="@drawable/ic_calendarb"
                app:layout_constraintStart_toEndOf="@+id/riv_item_poster_received"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_tv_show_name_received" />

            <TextView
                android:id="@+id/tv_item_first_air_date_received"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/first_air_date"
                android:textColor="@color/calendar"
                android:textSize="18sp"
...
